--- a/src/scss/adminlte.scss
+++ b/src/scss/adminlte.scss
@@ -73,3 +73,7 @@
 @import "parts/extra-components";
 @import "parts/pages";
 @import "parts/miscellaneous";
+
+// BODE Digital
+// -------------------------------------
+@import "bode_customizations";
