--- a/src/html/components/dashboard/_footer.astro
+++ b/src/html/components/dashboard/_footer.astro
@@ -3,16 +3,16 @@ const year = new Date().getFullYear();
 ---
 
 <!--begin::Footer-->
-<footer class="app-footer">
+<!-- <footer class="app-footer"> -->
   <!--begin::To the end-->
-  <div class="float-end d-none d-sm-inline">Anything you want</div>
+  <!-- <div class="float-end d-none d-sm-inline">Anything you want</div> -->
   <!--end::To the end-->
   <!--begin::Copyright-->
-  <strong>
-    Copyright &copy; 2014-{year}&nbsp;
-    <a href="https://adminlte.io" class="text-decoration-none">AdminLTE.io</a>.
-  </strong>
-  All rights reserved.
+  <!-- <strong> -->
+    <!-- Copyright &copy; 2014-{year}&nbsp; -->
+    <!-- <a href="https://adminlte.io" class="text-decoration-none">AdminLTE.io</a>. -->
+  <!-- </strong> -->
+  <!-- All rights reserved. -->
   <!--end::Copyright-->
-</footer>
+<!-- </footer> -->
 <!--end::Footer-->
